<resources>
    <string name="app_name">Spotify Wrapped</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <!--    were definitely changing "dashboard" btw-->
    <string name="title_profile">Profile</string>
    <string name="title_authentication">Authentication</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="use_llm_text_string">Generate taste predictions and recommendations using our AI wizard, or play games based on your tastes!</string>
    <string name="use_ai_wizard_string">Play</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_to_dashboard">Return to Dashboard</string>
    <string name="view_wrapped">View Wrapped</string>
    <string name="spikey_shape_description" />
    <string name="submit_guess">Submit Guess!</string>
    <string name="song_release_year_text">What year was song released?</string>
    <string name="guess_year">Year...</string>
    <string name="view_past_wrapped">VIEW PAST WRAPPED</string>
    <string name="popularity_how_to_play">Guess which artist from your top 20 this month has more followers by clicking the image that represents them.</string>
    <string name="popularity_button_text">Play the Popularity Game</string>
    <string name="how_to_play">How to play:</string>
    <string name="release_blurb">Test your knowledge of when your top tracks were released!</string>
    <string name="release_how_to_play">Use the text box to input a guess for the release year of the given song, then submit it!</string>
    <string name="play_the_dating_game_button">Play the Dating Game</string>
    <string name="who_s_more_popular">Who\'s More Popular?</string>
    <string name="the_release_dating_game">The (Release) Dating Game</string>
    <string name="games_based_on_your_taste">Games Based on Your Taste</string>
    <string name="popularity_blurb">How well do you know your top artists?</string>
    <string name ="popularity_game_text">Which of these artists in your top 20 is more popular (by followers): %1$s or %2$s?</string>
    <string name="spotify_connected">Spotify Connected!</string>

</resources>