<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_pattern_background">


    <TextView
        android:id="@+id/game_select_text"
        android:layout_width="223dp"
        android:layout_height="62dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/pane"
        android:fontFamily="@font/gugi"
        android:text="@string/games_based_on_your_taste"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="340dp"
        android:layout_height="270dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tri_color_pane"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_select_text">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gugi"
            android:gravity="center_vertical"
            android:text="@string/the_release_dating_game"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/release_blurb"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gugi"
            android:paddingHorizontal="20dp"
            android:text="@string/how_to_play"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono"
            android:paddingHorizontal="20dp"
            android:text="@string/release_how_to_play"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/play_song_release_date_button"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/play_the_dating_game_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="270dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/tri_color_pane_two"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gugi"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/who_s_more_popular"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono"
            android:paddingHorizontal="20dp"
            android:text="@string/popularity_blurb"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gugi"
            android:paddingHorizontal="20dp"
            android:text="@string/how_to_play"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_mono"
            android:paddingHorizontal="20dp"
            android:text="@string/popularity_how_to_play"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/play_popularity_guess_button"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/popularity_button_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>