<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_pattern_background"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="312dp"
        android:layout_height="621dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/pane"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gugi"
            android:text="Welcome, User!"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/change_email"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_greeting"
            app:layout_constraintVertical_bias="0.172" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/change_password"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_email"
            app:layout_constraintVertical_bias="0.093" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/logout"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/delete_account"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout"
            app:layout_constraintVertical_bias="0.484" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>